modules/gdscript/tests/scripts/analyzer/errors/constant_dictionary_index_assign.gd
const dictionary := {}

func test():
	var key: int = 0
	dictionary[key] = 0
